Fixed z-index for the back link in the edit page

--- a/combine/static/css/styles.css
+++ b/combine/static/css/styles.css
@@ -466,6 +466,7 @@ a.backLink {
     transition-duration: 0.1s;
     transition-property: transform;
     transition-timing-function: ease-in-out;
+    z-index: 999;
 }
 
 a.backLink:active {
